--- a/Client/index.html
+++ b/Client/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>My first Three.js app</title>
+		<title>Soup for peasants.</title>
 		<style>
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			require('./cube_example')
+			require('./game')
 		</script>
 	</body>
 </html>
